--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
   <title>Academic Project Page</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="file:///C:/Users/PC/Desktop/26-10-2023%20%20%20%20%20%D9%85%D8%A7%D9%84%D9%83%20%200%20-%20Frame%201.pdf">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
